--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
         <p>Derechos de autor © 2022 Página</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
