--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header id="header" class="seccion">
+    <header  class="seccion">
         <nav>
             <ul>
                 <li><a href="#inicio" >Home</a></li>
@@ -20,7 +20,7 @@
                 <li><a href="#contacto" >Contacto</a></li>    
             </ul>
         </nav>
-
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000123" fill-opacity="1" d="M0,96L120,133.3C240,171,480,245,720,250.7C960,256,1200,192,1320,160L1440,128L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
     </header>
    
     <main>     
