se creo grid de contenido, se colocaron colores globales en el root y se cambio la fuente principal por orbitron

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Shop</title>
+    <title>GameMaster</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -20,6 +23,17 @@
                 <li><a href="#contacto" >Contacto</a></li>    
             </ul>
         </nav>
+
+        <div class="header-content">
+            <h1>GameMaster</h1>
+            <p>Tu sitio preferido de videojuegos</p>
+        </div>
+
+        <button class="neon-button">
+            <a href="#" >Neon</a>
+        </button>
+
+        <!-- wavecss para transicionar -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000123" fill-opacity="1" d="M0,96L120,133.3C240,171,480,245,720,250.7C960,256,1200,192,1320,160L1440,128L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
     </header>
    
@@ -45,7 +59,7 @@
     </main>
     
     <footer>
-        <p>Derechos de autor © 2022 Página</p>
+        <p>Derechos de autor © 2024 Página</p>
     </footer>
 
     <script src="/script.js"></script>
