--- a/index.html
+++ b/index.html
@@ -16,22 +16,30 @@
 <body>
     <header  class="seccion">
         <nav>
+            <a href="#inicio" >
+                <img src="img/logo.png" alt="" width="64px">
+            </a>
             <ul>
-                <li><a href="#inicio" >Home</a></li>
                 <li><a href="#contenido" >Contenido</a></li>
                 <li><a href="#nosotros" >Nosotros</a></li>
                 <li><a href="#contacto" >Contacto</a></li>    
             </ul>
         </nav>
 
-        <div class="header-content">
+        <div class="header-text">
             <h1>GameMaster</h1>
             <p>Tu sitio preferido de videojuegos</p>
         </div>
 
-        <button class="neon-button">
-            <a href="#" >Neon</a>
-        </button>
+        <div class="header-info">
+            <h3 class="header-info_text">Disfruta del juego que buscas en tu consola</h3>
+            <img src="img/PC_color.png" alt="" class="header-info_PC" >
+            <img src="img/PS_color.png" alt="" class="header-info_PS" >
+            <img src="img/Xbox_color.png" alt="" class="header-info_Xbox" >
+
+            <a class="neon-button" href="#" >Shop</a>
+        </div>
+    
 
         <!-- wavecss para transicionar -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000123" fill-opacity="1" d="M0,96L120,133.3C240,171,480,245,720,250.7C960,256,1200,192,1320,160L1440,128L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
