se cambiaron padding, solucionados bugs en vistas de monitor y celular, se agrego breakpoint de tablets y estilos de neon a textos

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <header  class="seccion">
         <nav>
+            <h1>GameMaster</h1>
             <a href="#inicio" >
                 <img src="img/logo.png" alt="" width="64px">
             </a>
@@ -27,7 +28,7 @@
         </nav>
 
         <div class="header-text">
-            <h1>GameMaster</h1>
+            
             <p>Tu sitio preferido de videojuegos</p>
         </div>
 
@@ -42,7 +43,7 @@
     
 
         <!-- wavecss para transicionar -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000123" fill-opacity="1" d="M0,96L120,133.3C240,171,480,245,720,250.7C960,256,1200,192,1320,160L1440,128L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000123" fill-opacity="1" d="M0,224L1440,256L1440,320L0,320Z"></path></svg>
     </header>
    
     <main>     
