--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
             <!-- Contenido de la sección de galería -->
         </div>
 
+        <br><br>
 
-        <div id="nosotros" class="section">
+        <div id="nosotros" class="seccion">
             <div>
                 <h1>Nosotros</h1>
                 <section id="bienvenidos">
@@ -120,6 +121,7 @@
         </div>
         <!-- Contenido de la sección de nosotros -->
        
+        <br><br>
 
         <div id="contacto" class="seccion">
             <h1>Contacto</h1>
