se agrego slider

--- a/index.html
+++ b/index.html
@@ -45,7 +45,93 @@
 
 
     <section id="contenido">
-      <h1>CONTENIDO</h1>
+      <div id="contenido" class="seccion">
+        <h1>Juegos</h1>
+        <div class="centrar">
+            <div class="slider">                
+                <div class="slides">
+                    <!-- Acción -->
+                    <div class="slide">
+                        <div class="info">
+                            <h2>Acción</h2>
+                            <p>
+                                Sumérgete en los mejores juegos de acción, en primera o tercera persona, con una inmersiva historia o disfruta de los mejores títulos competitivos.
+                                <br><br>
+                                Siente la adrenalina.
+                            </p>
+                            <div class="centrar">
+                                <div class="imgsGeneros">
+                                    <img src="/img/battlefield.jpg" alt="">
+                                    <div class="titulosRel">
+                                        <p>Titulos Relevantes:</p>
+                                        <div class="iconos">
+                                            <img src="/img/gta.png" alt="GTAV">
+                                            <img src="/img/counter.jpg" alt="Counter-Strike">
+                                            <img src="/img/farcry.jpg" alt="Far Cry">
+                                            <img src="/img/Overwatch_2.png" alt="Overwatch 2">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- RPG -->
+                    <div class="slide">
+                        <div class="info">
+                            <h2>RPG (Role-Playing Game)</h2>
+                            <p>
+                                Crea tu personaje, desarrolla una historia, progresa en un mundo, conoce distintas mecánicas dentro del mismo.
+                                <br><br>Vive tu aventura.
+                            </p>
+                            <div class="centrar">
+                                <div class="imgsGeneros">
+                                    <img src="/img/horizon.jpg" alt="">
+                                    <div class="titulosRel">
+                                        <p>Titulos Relevantes:</p>
+                                        <div class="iconos">
+                                            <img src="/img/eldenring.jpg" alt="Elden Ring">
+                                            <img src="/img/newworld.jpg" alt="New World">
+                                            <img src="/img/diablo.png" alt="Diablo">
+                                            <img src="/img/thewitcher.jpg" alt="The Witcher">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- SIMULACION -->
+                    <div class="slide">
+                        <div class="info">
+                            <h2>Simulación</h2>
+                            <p>
+                                Vive las experiencias de la vida real sin tener que salir de tu casa, podrás conducir camiones por carreteras reales, cosechar tu propia granja o robar un banco.
+                                <br><br>
+                                Experimenta algo nuevo.
+                            </p>
+                            <div class="centrar">
+                                <div class="imgsGeneros">
+                                    <img src="/img/fly.jpg" alt="">
+                                    <div class="titulosRel">
+                                        <p>Titulos Relevantes:</p>
+                                        <div class="iconos">
+                                            <img src="/img/truck.jpg" alt="Simulador de camiones">
+                                            <img src="/img/supermarket.png" alt="Supermarket Simulator">
+                                            <img src="/img/cities.jpg" alt="Cities: Skylines">
+                                            <img src="/img/sims.png" alt="The Sims">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
+                <button class="next" onclick="changeSlide(1)">&#10095;</button>
+            </div>
+        </div>
+        <script src="/Proyecto-Codo-a-Codo-Node-2024/script.js"></script>
+    </div>
+    
     </section>
 
     <section id="nosotros">
