--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 
 
     <section id="contenido">
-      <div id="contenido" class="seccion">
         <h1>Juegos</h1>
         <div class="centrar">
             <div class="slider">                
@@ -53,7 +52,7 @@
                     <!-- Acción -->
                     <div class="slide">
                         <div class="info">
-                            <h2>Acción</h2>
+                            <h2>ACCIÓN</h2>
                             <p>
                                 Sumérgete en los mejores juegos de acción, en primera o tercera persona, con una inmersiva historia o disfruta de los mejores títulos competitivos.
                                 <br><br>
@@ -78,7 +77,7 @@
                     <!-- RPG -->
                     <div class="slide">
                         <div class="info">
-                            <h2>RPG (Role-Playing Game)</h2>
+                            <h2>RPG (ROLE-PLAYING GAME)</h2>
                             <p>
                                 Crea tu personaje, desarrolla una historia, progresa en un mundo, conoce distintas mecánicas dentro del mismo.
                                 <br><br>Vive tu aventura.
@@ -102,7 +101,7 @@
                     <!-- SIMULACION -->
                     <div class="slide">
                         <div class="info">
-                            <h2>Simulación</h2>
+                            <h2>SIMULACIÓN</h2>
                             <p>
                                 Vive las experiencias de la vida real sin tener que salir de tu casa, podrás conducir camiones por carreteras reales, cosechar tu propia granja o robar un banco.
                                 <br><br>
@@ -130,8 +129,6 @@
             </div>
         </div>
         <script src="/Proyecto-Codo-a-Codo-Node-2024/script.js"></script>
-    </div>
-    
     </section>
 
     <section id="nosotros">
@@ -173,8 +170,7 @@
             compártela con nosotros. Nuestro equipo está siempre abierto a nuevas propuestas y colaboraciones.</p>
         </div>
       </div>
-      <br><br>
-      <h3>Esperamos que disfrutes explorando GameMaster. ¡Nos vemos en el mundo virtual! 🎮✨</h3>
+      <h5>Esperamos que disfrutes explorando GameMaster. ¡Nos vemos en el mundo virtual! 🎮✨</h5>
       <br><br>
     </section>
 
