Responsividad contenido y fixes
-Section contenido, arreglada la responsividad faltan muuuuchos detalles y falta mejorar las imagenes.
-Fixes en gral.

--- a/index.html
+++ b/index.html
@@ -41,95 +41,57 @@
       
     </section>
 
+  
+<section id="contenido">
+  <div class="slider-container">
+    <div class="slide">
+      <h2>ACCIÓN</h2>
+      <p>Sumérgete en los mejores juegos de acción, en primera o tercera persona, con una inmersiva historia o disfruta de los mejores títulos competitivos.
+        <br><br>
+        Siente la adrenalina.</p>
+      <img class="main-img" src="/img/img_slider/battlefield.jpg" alt="Imagen principal 1">
+      <div class="zocalo">
+        <img src="/img/img_slider/counter.jpg" alt="Imagen relacionada 1">
+        <img src="/img/img_slider/farcry.jpg" alt="Imagen relacionada 2">
+        <img src="/img/img_slider/Overwatch_2.png" alt="Imagen relacionada 3">
+        <img src="/img/img_slider/gta.png" alt="Imagen relacionada 4">
+      </div>
+    </div>
+    <!-- Repetir para las otras dos diapositivas -->
+
+    <div class="slide">
+      <h2>RPG (ROLE-PLAYING GAME)</h2>
+      <p>Crea tu personaje, desarrolla una historia, progresa en un mundo, conoce distintas mecánicas dentro del mismo.
+        <br><br>
+        Vive tu aventura.</p>
+      <img class="main-img" src="/img/img_slider/thewitcher.jpg" alt="Imagen principal 2">
+      <div class="zocalo">
+        <img src="/img/img_slider/diablo.png" alt="Imagen relacionada 1">
+        <img src="/img/img_slider/eldenring.jpg" alt="Imagen relacionada 2">
+        <img src="/img/img_slider/newworld.jpg" alt="Imagen relacionada 3">
+        <img src="/img/img_slider/horizon.jpg" alt="Imagen relacionada 4">
+      </div>
+    </div>
+    <div class="slide">
+      <h2>SIMULACIÓN</h2>
+      <p>Vive las experiencias de la vida real sin tener que salir de tu casa, podrás conducir camiones por carreteras reales, cosechar tu propia granja o robar un banco.
+        <br><br>
+        Experimenta algo nuevo.</p>
+      <img class="main-img" src="/img/img_slider/supermarket.png" alt="Imagen principal 3">
+      <div class="zocalo">
+        <img src="/img/img_slider/truck.jpg" alt="Imagen relacionada 1">
+        <img src="/img/img_slider/sims.png" alt="Imagen relacionada 2">
+        <img src="/img/img_slider/cities.jpg" alt="Imagen relacionada 3">
+        <img src="/img/img_slider/fly.jpg" alt="Imagen relacionada 4">
+      </div>
+    </div>
+    <button class="prev">&#10094;</button>
+    <button class="next">&#10095;</button>
+  </div>
+ 
+</section>
 
 
-
-    <section id="contenido">
-        <h1>Juegos</h1>
-        <div class="centrar">
-            <div class="slider">                
-                <div class="slides">
-                    <!-- Acción -->
-                    <div class="slide">
-                        <div class="info">
-                            <h2>ACCIÓN</h2>
-                            <p>
-                                Sumérgete en los mejores juegos de acción, en primera o tercera persona, con una inmersiva historia o disfruta de los mejores títulos competitivos.
-                                <br><br>
-                                Siente la adrenalina.
-                            </p>
-                            <div class="centrar">
-                                <div class="imgsGeneros">
-                                    <img src="/img/battlefield.jpg" alt="">
-                                    <div class="titulosRel">
-                                        <p>Titulos Relevantes:</p>
-                                        <div class="iconos">
-                                            <img src="/img/gta.png" alt="GTAV">
-                                            <img src="/img/counter.jpg" alt="Counter-Strike">
-                                            <img src="/img/farcry.jpg" alt="Far Cry">
-                                            <img src="/img/Overwatch_2.png" alt="Overwatch 2">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- RPG -->
-                    <div class="slide">
-                        <div class="info">
-                            <h2>RPG (ROLE-PLAYING GAME)</h2>
-                            <p>
-                                Crea tu personaje, desarrolla una historia, progresa en un mundo, conoce distintas mecánicas dentro del mismo.
-                                <br><br>Vive tu aventura.
-                            </p>
-                            <div class="centrar">
-                                <div class="imgsGeneros">
-                                    <img src="/img/horizon.jpg" alt="">
-                                    <div class="titulosRel">
-                                        <p>Titulos Relevantes:</p>
-                                        <div class="iconos">
-                                            <img src="/img/eldenring.jpg" alt="Elden Ring">
-                                            <img src="/img/newworld.jpg" alt="New World">
-                                            <img src="/img/diablo.png" alt="Diablo">
-                                            <img src="/img/thewitcher.jpg" alt="The Witcher">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- SIMULACION -->
-                    <div class="slide">
-                        <div class="info">
-                            <h2>SIMULACIÓN</h2>
-                            <p>
-                                Vive las experiencias de la vida real sin tener que salir de tu casa, podrás conducir camiones por carreteras reales, cosechar tu propia granja o robar un banco.
-                                <br><br>
-                                Experimenta algo nuevo.
-                            </p>
-                            <div class="centrar">
-                                <div class="imgsGeneros">
-                                    <img src="/img/fly.jpg" alt="">
-                                    <div class="titulosRel">
-                                        <p>Titulos Relevantes:</p>
-                                        <div class="iconos">
-                                            <img src="/img/truck.jpg" alt="Simulador de camiones">
-                                            <img src="/img/supermarket.png" alt="Supermarket Simulator">
-                                            <img src="/img/cities.jpg" alt="Cities: Skylines">
-                                            <img src="/img/sims.png" alt="The Sims">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
-                <button class="next" onclick="changeSlide(1)">&#10095;</button>
-            </div>
-        </div>
-        <script src="/Proyecto-Codo-a-Codo-Node-2024/script.js"></script>
-    </section>
 
     <section id="nosotros">
       <h2>Somos<span></span>
