--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   
 <section id="contenido">
   <div class="slider-container">
-    <div class="slide">
+    <div class="slide active">
       <h2>ACCIÓN</h2>
       <p>Sumérgete en los mejores juegos de acción, en primera o tercera persona, con una inmersiva historia o disfruta de los mejores títulos competitivos.
         <br><br>
         Siente la adrenalina.</p>
-      <img class="main-img" src="/img/img_slider/battlefield.jpg" alt="Imagen principal 1">
+      <img class="main-img" src="/img/img_slider/Bf2042.jpg" alt="Imagen principal 1">
       <div class="zocalo">
         <img src="/img/img_slider/counter.jpg" alt="Imagen relacionada 1">
         <img src="/img/img_slider/farcry.jpg" alt="Imagen relacionada 2">
@@ -64,7 +64,7 @@
       <p>Crea tu personaje, desarrolla una historia, progresa en un mundo, conoce distintas mecánicas dentro del mismo.
         <br><br>
         Vive tu aventura.</p>
-      <img class="main-img" src="/img/img_slider/thewitcher.jpg" alt="Imagen principal 2">
+      <img class="main-img" src="/img/img_slider/thewitcher.webp" alt="Imagen principal 2">
       <div class="zocalo">
         <img src="/img/img_slider/diablo.png" alt="Imagen relacionada 1">
         <img src="/img/img_slider/eldenring.jpg" alt="Imagen relacionada 2">
@@ -77,7 +77,7 @@
       <p>Vive las experiencias de la vida real sin tener que salir de tu casa, podrás conducir camiones por carreteras reales, cosechar tu propia granja o robar un banco.
         <br><br>
         Experimenta algo nuevo.</p>
-      <img class="main-img" src="/img/img_slider/supermarket.png" alt="Imagen principal 3">
+      <img class="main-img" src="/img/img_slider/supermarket.jpg" alt="Imagen principal 3">
       <div class="zocalo">
         <img src="/img/img_slider/truck.jpg" alt="Imagen relacionada 1">
         <img src="/img/img_slider/sims.png" alt="Imagen relacionada 2">
@@ -88,7 +88,7 @@
     <button class="prev">&#10094;</button>
     <button class="next">&#10095;</button>
   </div>
- 
+  <script src="/script.js"></script>
 </section>
 
 
