Botón ir Arriba
-Implementación botón.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
       
     </section>
 
-  
-<section id="contenido">
+    <button id="boton-arriba">
+      <a href="#">
+          <img src="/img/icons/up24.png" alt="Ir arriba">
+      </a>
+    </button>  
+
+    <section id="contenido">
   <div class="slider-container">
     <div class="slide active">
       <h2>ACCIÓN</h2>
@@ -89,9 +94,7 @@
     <button class="next">&#10095;</button>
   </div>
   <script src="/script.js"></script>
-</section>
-
-
+    </section>
 
     <section id="nosotros">
       <h2>Somos<span></span>
@@ -135,7 +138,6 @@
       <h5>Esperamos que disfrutes explorando GameMaster. ¡Nos vemos en el mundo virtual! 🎮✨</h5>
       <br><br>
     </section>
-
 
     <section id="contacto">
       <h1>¿Tenés alguna duda o sugerencia? Podés decirnos tus ideas, mejoras y consejos.</h1>
@@ -188,7 +190,7 @@
     </section>
   </main>
 
-  <footer id="footer">
+<footer id="footer">
     <div class="social-icons">
       <a href="https://facebook.com"><i class="fa-brands fa-facebook" style="color: #ffffff;"
           aria-hidden="true"></i></a>
@@ -198,9 +200,9 @@
       <a href="https://pinterest.com"><i class="fa-brands fa-pinterest" style="color: #ffffff;"
           aria-hidden="true"></i></a>
     </div>
-  </footer>
+</footer>
 
-  <script src="/script.js"></script>
+<script src="/script.js"></script>
 </body>
 
 </html>
