Cambio de imagenes y medidas
-Redimensión de imágenes.
-Estandarización de imágenes.
- No se rompe el responsive ahora que todas las imágenes son del mismo tamaño.

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         Siente la adrenalina.</p>
       <img class="main-img" src="/img/img_slider/Bf2042.jpg" alt="Imagen principal 1">
       <div class="zocalo">
-        <img src="/img/img_slider/counter.jpg" alt="Imagen relacionada 1">
-        <img src="/img/img_slider/farcry.jpg" alt="Imagen relacionada 2">
-        <img src="/img/img_slider/Overwatch_2.png" alt="Imagen relacionada 3">
-        <img src="/img/img_slider/gta.png" alt="Imagen relacionada 4">
+        <img src="/img/img_slider/csgo.jpg" alt="Imagen relacionada 1">
+        <img src="/img/img_slider/fracry.jpg" alt="Imagen relacionada 2">
+        <img src="/img/img_slider/overwatch.jpg" alt="Imagen relacionada 3">
+        <img src="/img/img_slider/gtav.jpg" alt="Imagen relacionada 4">
       </div>
     </div>
     <!-- Repetir para las otras dos diapositivas -->
@@ -69,12 +69,12 @@
       <p>Crea tu personaje, desarrolla una historia, progresa en un mundo, conoce distintas mecánicas dentro del mismo.
         <br><br>
         Vive tu aventura.</p>
-      <img class="main-img" src="/img/img_slider/thewitcher.webp" alt="Imagen principal 2">
+      <img class="main-img" src="/img/img_slider/thewitcher3.jpg" alt="Imagen principal 2">
       <div class="zocalo">
-        <img src="/img/img_slider/diablo.png" alt="Imagen relacionada 1">
-        <img src="/img/img_slider/eldenring.jpg" alt="Imagen relacionada 2">
+        <img src="/img/img_slider/D4.jpg" alt="Imagen relacionada 1">
+        <img src="/img/img_slider/Elder.jpg" alt="Imagen relacionada 2">
         <img src="/img/img_slider/newworld.jpg" alt="Imagen relacionada 3">
-        <img src="/img/img_slider/horizon.jpg" alt="Imagen relacionada 4">
+        <img src="/img/img_slider/horizon_1.jpg" alt="Imagen relacionada 4">
       </div>
     </div>
     <div class="slide">
@@ -84,10 +84,10 @@
         Experimenta algo nuevo.</p>
       <img class="main-img" src="/img/img_slider/supermarket.jpg" alt="Imagen principal 3">
       <div class="zocalo">
-        <img src="/img/img_slider/truck.jpg" alt="Imagen relacionada 1">
-        <img src="/img/img_slider/sims.png" alt="Imagen relacionada 2">
-        <img src="/img/img_slider/cities.jpg" alt="Imagen relacionada 3">
-        <img src="/img/img_slider/fly.jpg" alt="Imagen relacionada 4">
+        <img src="/img/img_slider/euro.jpg" alt="Imagen relacionada 1">
+        <img src="/img/img_slider/Cities.jpg" alt="Imagen relacionada 2">
+        <img src="/img/img_slider/sims4.jpg" alt="Imagen relacionada 3">
+        <img src="/img/img_slider/flight.jpg" alt="Imagen relacionada 4">
       </div>
     </div>
     <button class="prev">&#10094;</button>
