--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <img class="main-img" src="/img/img_slider/supermarket.jpg" alt="Imagen principal 3">
       <div class="zocalo">
         <img src="/img/img_slider/euro.jpg" alt="Imagen relacionada 1">
-        <img src="/img/img_slider/Cities.jpg" alt="Imagen relacionada 2">
+        <img src="/img/img_slider/skylines.jpg" alt="Imagen relacionada 2">
         <img src="/img/img_slider/sims4.jpg" alt="Imagen relacionada 3">
         <img src="/img/img_slider/flight.jpg" alt="Imagen relacionada 4">
       </div>
