--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -42,7 +42,7 @@
     </section>
 
     <button id="boton-arriba">
-      <a href="#">
+      <a href="#inicio">
           <img src="/img/icons/up24.png" alt="Ir arriba">
       </a>
     </button>  
