--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
       
     </section>
 
-    <button id="boton-arriba">
-      <a href="#inicio">
-          <img src="/img/icons/up24.png" alt="Ir arriba">
-      </a>
-    </button>  
+    <a id="boton-arriba" href="#inicio">
+      <img src="/img/icons/up24.png" alt="Ir arriba">
+    </a>
+    
 
     <section id="contenido">
   <div class="slider-container">
