--- a/index.html
+++ b/index.html
@@ -191,13 +191,10 @@
 
 <footer id="footer">
     <div class="social-icons">
-      <a href="https://facebook.com"><i class="fa-brands fa-facebook" style="color: #ffffff;"
-          aria-hidden="true"></i></a>
-      <a href="https://twitter.com"><i class="fa-brands fa-twitter" style="color: #ffffff;" aria-hidden="true"></i></a>
-      <a href="https://instagram.com"><i class="fa-brands fa-instagram" style="color: #ffffff;"
-          aria-hidden="true"></i></a>
-      <a href="https://pinterest.com"><i class="fa-brands fa-pinterest" style="color: #ffffff;"
-          aria-hidden="true"></i></a>
+      <a href="https://facebook.com"><i class="fa-brands fa-facebook-f" style="color: #00FFC9" aria-hidden="true"></i></a>
+      <a href="https://twitter.com"><i class="fa-brands fa-x-twitter" style="color: #00FFC9" aria-hidden="true"></i></a>
+      <a href="https://instagram.com"><i class="fa-brands fa-instagram" style="color: #00FFC9" aria-hidden="true"></i></a>
+      <a href="https://discord.com"><i class="fa-brands fa-discord" style="color: #00FFC9" aria-hidden="true"></i></a>
     </div>
 </footer>
 
