--- a/index.html
+++ b/index.html
@@ -189,14 +189,15 @@
     </section>
   </main>
 
-<footer id="footer">
+  <footer id="footer">
     <div class="social-icons">
-      <a href="https://facebook.com"><i class="fa-brands fa-facebook-f" style="color: #00FFC9" aria-hidden="true"></i></a>
-      <a href="https://twitter.com"><i class="fa-brands fa-x-twitter" style="color: #00FFC9" aria-hidden="true"></i></a>
-      <a href="https://instagram.com"><i class="fa-brands fa-instagram" style="color: #00FFC9" aria-hidden="true"></i></a>
-      <a href="https://discord.com"><i class="fa-brands fa-discord" style="color: #00FFC9" aria-hidden="true"></i></a>
+      <a href="https://facebook.com"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+      <a href="https://twitter.com"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+      <a href="https://instagram.com"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+      <a href="https://discord.com"><i class="fa-brands fa-discord" aria-hidden="true"></i></a>
     </div>
 </footer>
+
 
 <script src="/script.js"></script>
 </body>
