--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <img src="/img/icons/up24.png" alt="Ir arriba">
     </a>
     <section id="contenido">
+      <h2 style="display: none;">Contenido</h2>
       <div class="slider-container">
         <div class="slide active">
           <h2>ACCIÓN</h2>
@@ -142,7 +143,7 @@
     </section>
 
     <section id="contacto">
-      <h1>¿Tenés alguna duda o sugerencia? Podés decirnos tus ideas, mejoras y consejos.</h1>
+      <h2>¿Tenés alguna duda o sugerencia? Podés decirnos tus ideas, mejoras y consejos.</h1>
       <div class="container-form">
         <div class="grid-container-form">
           <form id="contactForm" action="#" method="POST" class="form">
