--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <section id="inicio">
-
+      <h2 style="display: none;">Inicio</h2>
       <div class="home-text">
         <p>Tu sitio preferido de videojuegos</p>
       </div>
@@ -143,7 +143,7 @@
     </section>
 
     <section id="contacto">
-      <h2>¿Tenés alguna duda o sugerencia? Podés decirnos tus ideas, mejoras y consejos.</h1>
+      <h2>¿Tenés alguna duda o sugerencia? Podés decirnos tus ideas, mejoras y consejos.</h2>
       <div class="container-form">
         <div class="grid-container-form">
           <form id="contactForm" action="#" method="POST" class="form">
