--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <header>
       <div class="logotipo">
-        <p>GameMaster</p>
+        <p><span>G</span>ame<span>M</span>aster</p>
         <img src="https://res.cloudinary.com/dkojgz9s6/image/upload/v1715800919/CodoACodoNJS/logo_kuxdfd.png" alt="logo"
           width="40" height="40">
       </div>
